# kiwi-firmware

./: .gitignore  Cargo.toml  README.md  index.html  setup.ps1  setup.sh  versions.json
.cargo/: config.toml
config/: memory.x.template
device-blob/: Cargo.toml  README.md
device-blob/src/: lib.rs
drivers/bme680-rs/: Cargo.toml  README.md
drivers/bme680-rs/src/: interface.rs  lib.rs  registers.rs
drivers/bmi323-rs/: Cargo.toml  README.md
drivers/bmi323-rs/src/: async.rs  config.rs  interface.rs  lib.rs  registers.rs  sync.rs
drivers/bmp390-rs/: Cargo.toml
drivers/bmp390-rs/src/: async.rs  config.rs  conversion.rs  lib.rs  registers.rs  sync.rs
drivers/mmc5983ma/: Cargo.toml  README.md
drivers/mmc5983ma/src/: async.rs  config.rs  float.rs  lib.rs  registers.rs  sync.rs
drivers/ms5607-rs/: Cargo.toml  README.md
drivers/ms5607-rs/src/: async_impl.rs  blocking_impl.rs  details.rs  interface.rs  lib.rs
firmware/: .gitignore  Cargo.toml  build.rs
firmware/src/: lib.rs  main.rs  resources.rs  sensor_tasks.rs  usb.rs  wifi.rs
latest/: index.html
rules/: 99-kiwi.rules
v0.0.1/: index.html
v0.0.1-pre0/: firmware-flowchart.html  index.html
v0.0.1-pre0/assets/css/: style.css
v0.0.1-pre0/assets/js/: manual.js
v0.0.1-pre0/sections/: description.html  flowchart.html  prerequisites.html  repository.html  repository.md  setup.html  toc.html  toc.md  vscode.html  vscode.md
v0.0.1/assets/: references.json
v0.0.1/assets/media/: pdf-viewer.html
v0.0.1/sections/: cover.html  description.html  description.md  prerequisites.html  prerequisites.md  setup.html  setup.md  toc.html  vscode.html
