[package]
name = "kiwi-firmware-base"
version = "0.0.1"
edition = "2024"

[dependencies]
embassy-embedded-hal = { version = "0.6", features = ["defmt"] }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-net = { version = "0.9.1", features = [
    "icmp",
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "proto-ipv4",
    "multicast",
    "defmt",
] }
embassy-net-wiznet = { version = "0.3", features = [] }
embassy-time = { version = "0.5", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.10", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xb",
] }
embassy-usb = { version = "0.6" }
embassy-futures = { version = "0.1" }
embassy-usb-logger = { version = "0.6" }
cyw43 = { version = "0.7.0" }
cyw43-pio = { version = "0.10.0" }

defmt = "1.0"
defmt-rtt = "1.1"
fixed = "1.23"
fixed-macro = "1.2"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }
byte-slice-cast = { version = "1.2.0", default-features = false }
heapless = { version = "0.9", features = ["defmt"] }
usbd-hid = "0.10"
rand_core = "0.10"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io-async = { version = "0.7", features = ["defmt"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1.1"
portable-atomic = { version = "1.13", features = ["critical-section"] }
log = "0.4"
rand = { version = "0.10", default-features = false }
embedded-sdmmc = "0.9"
mcp25xx = { version = "0.4", features = ["mcp25625"] }
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "bd22cb7a92031fb16f74a5da42469d466c33383e" }
crc16 = "0.4"
dtoa = { version = "1.0" }
embassy-task-watchdog = { version = "0.0.9", features = ["defmt", "rp", "defmt-messages"] }
uom = { workspace = true, default-features = false, features = [
    "f32",
    "si",
    "autoconvert",
] }

device-blob = { workspace = true, features = ["defmt"] }
mmc5983ma = { workspace = true, features = ["defmt", "async", "float"] }
bmi323-rs = { workspace = true, features = ["float", "defmt", "async", "defmt-messages"] }
bmp390-rs = { workspace = true, features = ["defmt", "float", "async"] }
ms5607-rs = { workspace = true, features = ["defmt", "async", "float"] }
bme680-rs = { workspace = true, features = ["defmt"] }
kiwi-measurements = { workspace = true, features = ["defmt"] }
libm = { workspace = true, default-features = false }
kmdparse = "0.0.2"

[features]
defmt = []
sensor-mag = []
sensor-imu = []
sensor-baro = []
sensor-humi = []
sensors-all = ["sensor-mag", "sensor-imu", "sensor-baro", "sensor-humi"]
# Accelerometer output data rate (mutually exclusive; default: imu-accel-odr-50hz)
imu-accel-odr-0hz78 = ["sensor-imu"]
imu-accel-odr-1hz56 = ["sensor-imu"]
imu-accel-odr-3hz125 = ["sensor-imu"]
imu-accel-odr-6hz25 = ["sensor-imu"]
imu-accel-odr-12hz5 = ["sensor-imu"]
imu-accel-odr-25hz = ["sensor-imu"]
imu-accel-odr-50hz = ["sensor-imu"]
imu-accel-odr-100hz = ["sensor-imu"]
imu-accel-odr-200hz = ["sensor-imu"]
imu-accel-odr-400hz = ["sensor-imu"]
imu-accel-odr-800hz = ["sensor-imu"]
imu-accel-odr-1600hz = ["sensor-imu"]
# Gyroscope output data rate (mutually exclusive; default: imu-gyro-odr-50hz)
imu-gyro-odr-0hz78 = ["sensor-imu"]
imu-gyro-odr-1hz56 = ["sensor-imu"]
imu-gyro-odr-3hz125 = ["sensor-imu"]
imu-gyro-odr-6hz25 = ["sensor-imu"]
imu-gyro-odr-12hz5 = ["sensor-imu"]
imu-gyro-odr-25hz = ["sensor-imu"]
imu-gyro-odr-50hz = ["sensor-imu"]
imu-gyro-odr-100hz = ["sensor-imu"]
imu-gyro-odr-200hz = ["sensor-imu"]
imu-gyro-odr-400hz = ["sensor-imu"]
imu-gyro-odr-800hz = ["sensor-imu"]
imu-gyro-odr-1600hz = ["sensor-imu"]
default = ["defmt", "sensors-all", "imu-accel-odr-50hz", "imu-gyro-odr-50hz"]

[build-dependencies]
crc16 = "0.4"
regex = "1.12"
device-blob = { workspace = true }
heapless = { version = "0.9", default-features = false }
