[package]
name = "bmi323-rs"
version = "0.0.1"
edition = "2021"
readme = "README.md"
authors = ["Sunip K. Mukherjee <sunipkmukherjee@gmail.com>"]
license = "Apache-2.0"
keywords = [
    "imu",
    "embedded-hal-driver",
    "no_std",
    "async",
]
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/bmi323-rs"
description = "Platform agnostic Rust driver for the BMI323 IMU."

include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
]


[features]
default = ["float", "async", "sync"]
defmt = ["dep:defmt", "dep:libm"]
defmt-messages = ["defmt"]
float = ["dep:libm", "dep:uom", "uom/f32", "uom/si", "uom/autoconvert"]
async = ["dep:embedded-hal-async", "dep:embassy-sync"]
sync = ["dep:embedded-hal"]

[dependencies]
bitfield-struct = { workspace = true }
defmt = { workspace = true, "optional" = true }
embassy-sync = { workspace = true, optional = true }
embedded-hal-async = { workspace = true, optional = true }
embedded-hal = { workspace = true, optional = true }
libm = { workspace = true, default-features = false, optional = true }
uom = { workspace = true, default-features = false, optional = true }
